omni/tests/goldens/types/unknown_type_11.err
tests/goldens/types/unknown_type_11.omni:1:13: error: unknown type "Mystery11"
  let value11:Mystery11 = 1
              ~~~~~~~~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_11.omni:1:1: error: cannot assign int to Mystery11
  let value11:Mystery11 = 1
  ~~~~~~~~~~~~~~~~~~~~~~~~~ hint: convert the expression to Mystery11 or change the variable type to int
